<resources>
    <string name="app_name">tokopedia</string>
    <string name="cari_produk">Cari Powerbank</string>
    <string name="location_text">Dikirim ke <b>Farhan Fadhlurrahman Arkaan</b></string>
    <string name="member">Mamber Gold</string>
    <string name="category">Category Name</string>
    <string name="berakhir_dalam">Berakhir dalam</string>
    <string name="loc_jakarta_barat">Jakarta Barat</string>
    <string name="bebas_ongkir">Bebas Ongkir</string>
    <string name="line"><strike> Rp 94.000 </strike> </string>

    <string name="lihat">Lihat Semua</string>
    <string name="menit">09 menit 26 detik</string>
    <string name="kejar_diskon">Kejar Diskon</string>
    <string name="video_menarik">Video menarik untukmu</string>
    <string name="lihat_all">Lihat Semua</string>


    <string name="feed">Feed</string>
    <string name="home">Home</string>
    <string name="official_store">Official Store</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaction">Transaction</string>
    <string name="nominal_gopay">Rp 1.000.000</string>
    <string name="aktifkan_gopay">Aktifkan</string>
    <string name="kupon_member">11 Kupon</string>
    <string name="viewers">2.5 rb</string>
    <string name="kupon_speciall">kupon special</string>
    <string name="keep_and_calm">Keep and Calm With UCHII</string>
    <string name="uchiih_store">uchii store</string>
    <string name="_2_5_rb">2.5 rb</string>
    <string name="kupon_speciallll">kupon special</string>
    <string name="harga_rp">Rp 10,000</string>
    <string name="persen_diskon">26%</string>
    <string name="segera_habis">Segera Habis</string>
    <string name="official_storee">Official Store</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="handphone_tablet"><![CDATA[Handphone & Tablet]]></string>
    <string name="top_up_tagihan"><![CDATA[Top-Up & Tagihan]]></string>
    <string name="keuangan">Keuangan</string>
    <string name="bangga_lokal">Bangga Lokal</string>
    <string name="bazar_hari_ini">Bazar Hari ini</string>
    <string name="live_shopping">Live Shopping</string>
    <string name="tokopedia_seru">Tokopedia Seru</string>
    <string name="kebutuhan_harian">Kebutuhan Harian</string>
    <string name="peduli_lindungi">Peduli Lindungi</string>
    <string name="cola">Cola all around the world GOKIL</string>
    <string name="coca_cola_company">Coca Cola Company</string>
    <string name="gaming_gear_paling_gg_kece_mantap">Gaming gear paling gg kece mantap</string>
    <string name="logitech_company">Logitech Company</string>
    <string name="kupon_special">kupon special</string>
    <string name="rp_3_500_00">Rp 3.500.000</string>
    <string name="rp_1_000_000">Rp 1.000.000</string>
    <string name="rp_2_000_000">Rp 2.000.000</string>
</resources>
