<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home"
        android:iconTint="@color/green_tokped"/>

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_nav_feeds"
        android:title="@string/feed"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/nav_official_store"
        android:icon="@drawable/ic_nav_check"
        android:title="@string/official_store"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/nav_love"
        android:icon="@drawable/ic_nav_love"
        android:title="@string/wishlist"
        android:iconTint="@color/grey"/>
    <item
        android:id="@+id/nav_note"
        android:icon="@drawable/ic_nav_note"
        android:title="@string/transaction"
        android:iconTint="@color/grey"/>



</menu>