<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_half_oval"
        tools:ignore="ContentDescription" />

    <LinearLayout
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="5dp"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_placeholder"
                    android:tint="@color/white" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/location_text"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="10dp"

                >
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="5dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/gopay_logo"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/icon_gopay"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/nominal_rp"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:text="@string/nominal_gopay"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toEndOf="@id/gopay_logo"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textStyle="bold
"/>
                        <TextView
                            android:id="@+id/aktifkan"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:text="@string/aktifkan_gopay"
                            android:textStyle="bold"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/gopay_logo"
                            app:layout_constraintTop_toBottomOf="@id/nominal_rp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/mamber_logo"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_star_member"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/mamber_kasta"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:text="@string/member"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toEndOf="@id/mamber_logo"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/kupon"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:text="@string/kupon_member"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/mamber_logo"
                            app:layout_constraintTop_toBottomOf="@id/mamber_kasta"/>



                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </RelativeLayout>



